; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_libtomcrypt.c_crypto_public_key_encrypt_pkcs1_v15.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_libtomcrypt.c_crypto_public_key_encrypt_pkcs1_v15.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_public_key = type { i32 }

@PK_PUBLIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_public_key_encrypt_pkcs1_v15(%struct.crypto_public_key* %0, i32* %1, i64 %2, i32* %3, i64* %4) #0 {
  %6 = alloca %struct.crypto_public_key*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64*, align 8
  store %struct.crypto_public_key* %0, %struct.crypto_public_key** %6, align 8
  store i32* %1, i32** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  store i64* %4, i64** %10, align 8
  %11 = load %struct.crypto_public_key*, %struct.crypto_public_key** %6, align 8
  %12 = getelementptr inbounds %struct.crypto_public_key, %struct.crypto_public_key* %11, i32 0, i32 0
  %13 = load i32, i32* @PK_PUBLIC, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = load i64*, i64** %10, align 8
  %18 = call i32 @crypto_rsa_encrypt_pkcs1(i32 2, i32* %12, i32 %13, i32* %14, i64 %15, i32* %16, i64* %17)
  ret i32 %18
}

declare dso_local i32 @crypto_rsa_encrypt_pkcs1(i32, i32*, i32, i32*, i64, i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
